--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   },
   "homepage": "https://github.com/danna2123/card#readme",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "css-loader": "^6.7.3",
     "html-loader": "^4.2.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
